--- a/Project 13/Base.lproj/Main.storyboard
+++ b/Project 13/Base.lproj/Main.storyboard
@@ -17,34 +17,64 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w8w-0k-clN">
-                                <rect key="frame" x="20" y="90" width="374" height="654"/>
+                                <rect key="frame" x="20" y="90" width="374" height="578"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="owN-CA-4bb">
-                                        <rect key="frame" x="10" y="10" width="354" height="634"/>
+                                        <rect key="frame" x="10" y="10" width="354" height="558"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="owN-CA-4bb" firstAttribute="centerY" secondItem="w8w-0k-clN" secondAttribute="centerY" id="63n-UX-Ndv"/>
-                                    <constraint firstItem="owN-CA-4bb" firstAttribute="centerX" secondItem="w8w-0k-clN" secondAttribute="centerX" id="RAQ-Ue-xv9"/>
-                                    <constraint firstItem="owN-CA-4bb" firstAttribute="leading" secondItem="w8w-0k-clN" secondAttribute="leading" constant="10" id="jtX-BW-jnM"/>
-                                    <constraint firstItem="owN-CA-4bb" firstAttribute="top" secondItem="w8w-0k-clN" secondAttribute="top" constant="10" id="wLX-Lg-7cY"/>
+                                    <constraint firstItem="owN-CA-4bb" firstAttribute="centerX" secondItem="w8w-0k-clN" secondAttribute="centerX" id="I3z-M4-a1c"/>
+                                    <constraint firstItem="owN-CA-4bb" firstAttribute="centerY" secondItem="w8w-0k-clN" secondAttribute="centerY" id="iOm-cU-EkU"/>
+                                    <constraint firstItem="owN-CA-4bb" firstAttribute="top" secondItem="w8w-0k-clN" secondAttribute="top" constant="10" id="jNL-g5-VNa"/>
+                                    <constraint firstItem="owN-CA-4bb" firstAttribute="leading" secondItem="w8w-0k-clN" secondAttribute="leading" constant="10" id="qcK-jL-nUX"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intenstiy:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pMv-sr-D9b">
-                                <rect key="frame" x="20" y="778" width="70" height="22"/>
+                                <rect key="frame" x="20" y="757.5" width="70" height="31"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="cMC-8L-IGh">
-                                <rect key="frame" x="99" y="774" width="297" height="31"/>
+                                <rect key="frame" x="99" y="758" width="297" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="nqi-Vt-TgH"/>
+                                </constraints>
                                 <connections>
                                     <action selector="intensityChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="roh-iB-HlA"/>
                                 </connections>
                             </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Radius: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRp-Pl-YzR">
+                                <rect key="frame" x="20" y="718.5" width="61" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="zsT-tw-RDu">
+                                <rect key="frame" x="98" y="718" width="297" height="31"/>
+                                <connections>
+                                    <action selector="intensityChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="dcT-2z-uxV"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scale:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WS0-bw-EJ3">
+                                <rect key="frame" x="20" y="682.5" width="47" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Jvf-9L-0xo">
+                                <rect key="frame" x="98" y="678" width="297" height="31"/>
+                                <connections>
+                                    <action selector="intensityChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="1Nj-gV-9eX"/>
+                                </connections>
+                            </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PGY-8W-Dmg">
-                                <rect key="frame" x="20" y="810" width="110" height="32"/>
+                                <rect key="frame" x="20" y="798" width="110" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="mJt-RW-giR"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Change Filter"/>
                                 <connections>
@@ -52,7 +82,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u0u-lr-2TR">
-                                <rect key="frame" x="338.5" y="810" width="55.5" height="31"/>
+                                <rect key="frame" x="338.5" y="798" width="55.5" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="aN4-KT-7Ak"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Save"/>
                                 <connections>
@@ -63,33 +96,46 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="PGY-8W-Dmg" firstAttribute="baseline" secondItem="u0u-lr-2TR" secondAttribute="firstBaseline" id="64z-fg-BtW"/>
-                            <constraint firstItem="w8w-0k-clN" firstAttribute="leading" secondItem="pMv-sr-D9b" secondAttribute="leading" id="9gY-5l-CzI"/>
-                            <constraint firstItem="pMv-sr-D9b" firstAttribute="leading" secondItem="PGY-8W-Dmg" secondAttribute="leading" id="JW1-An-wso"/>
-                            <constraint firstItem="cMC-8L-IGh" firstAttribute="top" secondItem="w8w-0k-clN" secondAttribute="bottom" constant="30" id="NFG-CI-mYx"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="PGY-8W-Dmg" secondAttribute="bottom" constant="20" id="O0D-JP-Xeb"/>
-                            <constraint firstItem="u0u-lr-2TR" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Wvz-XL-UOo"/>
-                            <constraint firstItem="PGY-8W-Dmg" firstAttribute="top" secondItem="pMv-sr-D9b" secondAttribute="bottom" constant="10" id="YkF-lz-nuc"/>
-                            <constraint firstItem="pMv-sr-D9b" firstAttribute="top" secondItem="w8w-0k-clN" secondAttribute="bottom" constant="34" id="am1-hX-wDd"/>
-                            <constraint firstItem="u0u-lr-2TR" firstAttribute="top" secondItem="PGY-8W-Dmg" secondAttribute="top" id="cXN-Sf-oAJ"/>
-                            <constraint firstItem="u0u-lr-2TR" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="PGY-8W-Dmg" secondAttribute="trailing" constant="8" symbolic="YES" id="mpB-8s-eIa"/>
-                            <constraint firstItem="cMC-8L-IGh" firstAttribute="leading" secondItem="pMv-sr-D9b" secondAttribute="trailing" constant="11" id="neh-6h-Myr"/>
-                            <constraint firstItem="pMv-sr-D9b" firstAttribute="centerY" secondItem="cMC-8L-IGh" secondAttribute="centerY" id="pQ7-xv-OUg"/>
-                            <constraint firstItem="w8w-0k-clN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="2" id="qft-ns-Mvr"/>
-                            <constraint firstItem="w8w-0k-clN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="uCP-pL-zhy"/>
-                            <constraint firstItem="w8w-0k-clN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vPe-Xv-fJk"/>
-                            <constraint firstItem="w8w-0k-clN" firstAttribute="trailing" secondItem="cMC-8L-IGh" secondAttribute="trailing" id="zUc-4Z-klT"/>
+                            <constraint firstItem="WS0-bw-EJ3" firstAttribute="centerY" secondItem="Jvf-9L-0xo" secondAttribute="centerY" id="2ro-m5-7li"/>
+                            <constraint firstItem="w8w-0k-clN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="8lS-Rz-ij9"/>
+                            <constraint firstItem="Jvf-9L-0xo" firstAttribute="leading" secondItem="zsT-tw-RDu" secondAttribute="leading" id="CXe-zz-kEO"/>
+                            <constraint firstItem="dRp-Pl-YzR" firstAttribute="leading" secondItem="pMv-sr-D9b" secondAttribute="leading" id="Dhu-tg-TWr"/>
+                            <constraint firstItem="w8w-0k-clN" firstAttribute="leading" secondItem="WS0-bw-EJ3" secondAttribute="leading" id="E3U-SB-gbL"/>
+                            <constraint firstItem="Jvf-9L-0xo" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="WS0-bw-EJ3" secondAttribute="trailing" constant="8" symbolic="YES" id="ECL-yy-zfp"/>
+                            <constraint firstItem="w8w-0k-clN" firstAttribute="trailing" secondItem="cMC-8L-IGh" secondAttribute="trailing" id="P8N-af-9Af"/>
+                            <constraint firstItem="dRp-Pl-YzR" firstAttribute="centerY" secondItem="zsT-tw-RDu" secondAttribute="centerY" id="UC8-Qn-Rgf"/>
+                            <constraint firstItem="cMC-8L-IGh" firstAttribute="top" secondItem="zsT-tw-RDu" secondAttribute="bottom" constant="10" id="UbM-wp-rsI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jvf-9L-0xo" secondAttribute="trailing" constant="21" id="XYM-ld-JYF"/>
+                            <constraint firstItem="PGY-8W-Dmg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ZaY-6D-FRf"/>
+                            <constraint firstItem="cMC-8L-IGh" firstAttribute="leading" secondItem="pMv-sr-D9b" secondAttribute="trailing" constant="11" id="Zb8-cJ-4DX"/>
+                            <constraint firstItem="Jvf-9L-0xo" firstAttribute="trailing" secondItem="zsT-tw-RDu" secondAttribute="trailing" id="bhV-mE-AYy"/>
+                            <constraint firstItem="dRp-Pl-YzR" firstAttribute="top" secondItem="WS0-bw-EJ3" secondAttribute="bottom" constant="15" id="efL-rW-xVv"/>
+                            <constraint firstItem="PGY-8W-Dmg" firstAttribute="top" secondItem="cMC-8L-IGh" secondAttribute="bottom" constant="10" id="kGY-pw-PFY"/>
+                            <constraint firstItem="WS0-bw-EJ3" firstAttribute="leading" secondItem="dRp-Pl-YzR" secondAttribute="leading" id="kMd-Ds-GlI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="PGY-8W-Dmg" secondAttribute="bottom" constant="20" id="ko1-Oh-A7C"/>
+                            <constraint firstItem="pMv-sr-D9b" firstAttribute="centerY" secondItem="cMC-8L-IGh" secondAttribute="centerY" id="lH0-kC-fro"/>
+                            <constraint firstItem="zsT-tw-RDu" firstAttribute="top" secondItem="Jvf-9L-0xo" secondAttribute="bottom" constant="10" id="nhc-tA-NB0"/>
+                            <constraint firstItem="zsT-tw-RDu" firstAttribute="leading" secondItem="dRp-Pl-YzR" secondAttribute="trailing" constant="19" id="qaa-O1-GX9"/>
+                            <constraint firstItem="PGY-8W-Dmg" firstAttribute="baseline" secondItem="u0u-lr-2TR" secondAttribute="baseline" id="uka-Wt-g67"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="u0u-lr-2TR" secondAttribute="trailing" constant="20" id="wgC-zw-K4g"/>
+                            <constraint firstItem="Jvf-9L-0xo" firstAttribute="top" secondItem="w8w-0k-clN" secondAttribute="bottom" constant="10" id="wmU-gk-TA4"/>
+                            <constraint firstItem="w8w-0k-clN" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="xk8-cJ-wQ4"/>
+                            <constraint firstItem="pMv-sr-D9b" firstAttribute="top" secondItem="dRp-Pl-YzR" secondAttribute="bottom" constant="10" id="z6C-Wa-AKZ"/>
+                            <constraint firstItem="w8w-0k-clN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="2" id="zc5-RL-47a"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="8sZ-LO-2hz"/>
                     <connections>
+                        <outlet property="changeFilterButton" destination="PGY-8W-Dmg" id="9Me-uI-ka9"/>
                         <outlet property="imageView" destination="owN-CA-4bb" id="1dg-eL-oSE"/>
                         <outlet property="intensity" destination="cMC-8L-IGh" id="qsg-Ud-PWM"/>
+                        <outlet property="radiusSlider" destination="zsT-tw-RDu" id="Ioo-Zc-e4r"/>
+                        <outlet property="scaliSlider" destination="Jvf-9L-0xo" id="slX-G7-kYY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-48" y="73"/>
+            <point key="canvasLocation" x="-110" y="82"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sos-Kh-GRN">
